--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta nname="description" content="Web site created using create-react-app"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Journal App</title>
   </head>
